k8s/dispatch/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: salis-dispatch
  labels:
    app.kubernetes.io/part-of: salis-auto
