k8s/dispatch/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: dispatch
  namespace: salis-dispatch
  labels:
    app: dispatch
spec:
  selector:
    app: dispatch
  ports:
    - name: http
      port: 80
      targetPort: http
  type: ClusterIP
